agrande las fotos del carrusel

--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="./img/sunsetrip1.jpg" class="d-block w-100" alt="fiesta de hernan cattaneo sunsetrip buenos aires 2020">
+        <img src="./img/sunsetrip1.jpg" class="d-block w-100" id="imgCarrusel" alt="fiesta de hernan cattaneo sunsetrip buenos aires 2020">
       </div>
       <div class="carousel-item">
-        <img src="./img/sunsetrip5.jpg" class="d-block w-100" alt="fiesta de hernan cattaneo sunsetrip buenos aires 2020">
+        <img src="./img/sunsetrip5.jpg" class="d-block w-100" id="imgCarrusel" alt="fiesta de hernan cattaneo sunsetrip buenos aires 2020">
       </div>
       <div class="carousel-item">
-        <img src="./img/sunsetrip6.jpg" class="d-block w-100" alt="fiesta de hernan cattaneo sunsetrip buenos aires 2020">
+        <img src="./img/sunsetrip6.jpg" class="d-block w-100" id="imgCarrusel" alt="fiesta de hernan cattaneo sunsetrip buenos aires 2020">
       </div>>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
