--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="col-sm-5">
           <center>
             <div class="card bg-dark text-white">
-              <img src="./img/residentazul.jpg" class="card-img-top" alt="...">
+              <img src="./img/residentazul.jpg" class="card-img-top" alt="portada del programa de radio de hernan cattaneo">
               <div class="card-body p-2">
                 <h5 class="card-title">Podcast "Resident"</h5>
                 <p class="card-text">Escucha los podcast de Hernan en radio "Urbana Play".</p>
@@ -86,7 +86,7 @@
         <div class="col-sm-5">
           <center>
             <div class="card bg-dark text-white">
-              <img src="./img/hernancercle.jpg" class="card-img-top" alt="...">
+              <img src="./img/hernancercle.jpg" class="card-img-top" alt="hernan cattaneo tocando en el festival de cercle">
               <div class="card-body p-2">
                 <h5 class="card-title">Cercle live streaming</h5>
                 <p class="card-text">Escucha el set de Hernan en Cercle Festival en "Air Espace".</p>
@@ -98,7 +98,7 @@
         <div class="col-sm-5">
           <center>
             <div class="card bg-dark text-white">
-              <img src="./img/logosudebatfondonegro.jpg" class="card-img-top" alt="..." >
+              <img src="./img/logosudebatfondonegro.jpg" class="card-img-top" alt="logo sudbeat" >
               <div class="card-body p-2">
                 <h5 class="card-title">Sudbeat</h5>
                 <p class="card-text">Conoce "Sudbeat", el sello discografico de Hernan.</p>
@@ -110,7 +110,7 @@
         <div class="col-sm-5">
           <center>
             <div class="card bg-dark text-white">
-              <img src="./img/logolongobardi.jpg" class="card-img-top" alt="..." >
+              <img src="./img/logolongobardi.jpg" class="card-img-top" alt="portada del programa en dialogo con Longobardi" >
               <div class="card-body p-2">
                 <h5 class="card-title">En dialogo con Longobardi </h5>
                 <p class="card-text">Mira la nota de Hernan en "Dialogo con Longobardi".</p>
@@ -137,7 +137,7 @@
         <div class="col">
           <center>
             <div class="card bg-dark text-white" >
-              <img src="./img/purple.jpg" class="card-img-top" alt="...">
+              <img src="./img/purple.jpg" class="card-img-top" alt="portada del ep purple">
               <div class="card-body">
                 <a href="https://www.beatport.com/release/polymath/3439012" class="btn btn-secondary p-1">Comprar</a>
               </div>
@@ -147,7 +147,7 @@
         <div class="col">
           <center>
             <div class="card bg-dark text-white">
-              <img src="./img/timeles.jpg" class="card-img-top" alt="...">
+              <img src="./img/timeles.jpg" class="card-img-top" alt="portada del ep timeles">
               <div class="card-body">
                 <a href="https://www.beatport.com/release/timeless-ibiza/3749477" class="btn btn-secondary p-1">Comprar</a>
               </div>
@@ -157,7 +157,7 @@
         <div class="col">
           <center>
             <div class="card bg-dark text-white" >
-              <img src="./img/edify.jpg" class="card-img-top" alt="...">
+              <img src="./img/edify.jpg" class="card-img-top" alt="portada del ep edify">
               <div class="card-body">
                 <a href="https://www.beatport.com/release/purple-break/3255906" class="btn btn-secondary p-1">Comprar</a>
               </div>
@@ -167,7 +167,7 @@
         <div class="col">
           <center>
             <div class="card bg-dark text-white" >
-              <img src="./img/london.jpg" class="card-img-top" alt="...">
+              <img src="./img/london.jpg" class="card-img-top" alt="portada del ep london">
               <div class="card-body">
                 <a href="https://www.beatport.com/release/edify/3483703" class="btn btn-secondary p-1">Comprar</a>
               </div>
@@ -177,7 +177,7 @@
         <div class="col">
           <center>
             <div class="card bg-dark text-white" >
-              <img src="./img/borealis.jpg" class="card-img-top" alt="...">
+              <img src="./img/borealis.jpg" class="card-img-top" alt="portada del ep borealis">
               <div class="card-body">
                 <a href="https://www.beatport.com/release/borealis-remixes/3508168" class="btn btn-secondary p-1">Comprar</a>
               </div>
@@ -187,7 +187,7 @@
         <div class="col">
           <center>
             <div class="card bg-dark text-white">
-              <img src="./img/polymat.jpg" class="card-img-top" alt="...">
+              <img src="./img/polymat.jpg" class="card-img-top" alt="polymat">
               <div class="card-body">
                 <a href="https://www.beatport.com/release/london/3300150" class="btn btn-secondary p-1">Comprar</a>
               </div>
