--- a/pages/radioshow.html
+++ b/pages/radioshow.html
@@ -51,7 +51,7 @@
         <div class="col">
           <center>
             <div class="card bg-dark text-white" >
-              <img src="../img/resident464.jpg" class="card-img-top" alt="...">
+              <img src="../img/resident464.jpg" class="card-img-top" alt="portada del resident 464">
               <div class="card-body">
                 <a href="https://podcast.hernancattaneo.com/" class="btn btn-secondary p-1">Play</a>
               </div>
@@ -61,7 +61,7 @@
         <div class="col">
           <center>
             <div class="card bg-dark text-white">
-              <img src="../img/resident463.jpg" class="card-img-top" alt="...">
+              <img src="../img/resident463.jpg" class="card-img-top" alt="portada del resident 463">
               <div class="card-body">
                 <a href="https://podcast.hernancattaneo.com/" class="btn btn-secondary p-1">Play</a>
               </div>
@@ -71,7 +71,7 @@
         <div class="col">
           <center>
             <div class="card bg-dark text-white" >
-              <img src="../img/resident459.jpg" class="card-img-top" alt="...">
+              <img src="../img/resident459.jpg" class="card-img-top" alt="portada del resident 459">
               <div class="card-body">
                 <a href="https://podcast.hernancattaneo.com/" class="btn btn-secondary p-1">Play</a>
               </div>
@@ -81,7 +81,7 @@
         <div class="col">
           <center>
             <div class="card bg-dark text-white" >
-              <img src="../img/resident458.jpg" class="card-img-top" alt="...">
+              <img src="../img/resident458.jpg" class="card-img-top" alt="portada del resident 458">
               <div class="card-body">
                 <a href="https://podcast.hernancattaneo.com/" class="btn btn-secondary p-1">Play</a>
               </div>
@@ -91,7 +91,7 @@
         <div class="col">
           <center>
             <div class="card bg-dark text-white" >
-              <img src="../img/resident457.jpg" class="card-img-top" alt="...">
+              <img src="../img/resident457.jpg" class="card-img-top" alt="portada del resident 457">
               <div class="card-body">
                 <a href="https://podcast.hernancattaneo.com/" class="btn btn-secondary p-1">Play</a>
               </div>
@@ -101,7 +101,7 @@
         <div class="col">
           <center>
             <div class="card bg-dark text-white">
-              <img src="../img/resident456.jpg" class="card-img-top" alt="...">
+              <img src="../img/resident456.jpg" class="card-img-top" alt="portada del resident 456">
               <div class="card-body">
                 <a href="https://podcast.hernancattaneo.com/" class="btn btn-secondary p-1">Play</a>
               </div>
