--- a/pages/sudbeat.html
+++ b/pages/sudbeat.html
@@ -42,13 +42,13 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../img/showcase.jpg" class="d-block w-100" alt="fiesta de hernan cattaneo sunsetrip buenos aires 2020">
+          <img src="../img/showcase.jpg" class="d-block w-100" alt="flyer de evento de sudbeat">
         </div>
         <div class="carousel-item">
-          <img src="../img/ezequielarias.jpg" class="d-block w-100" alt="fiesta de hernan cattaneo sunsetrip buenos aires 2020">
+          <img src="../img/ezequielarias.jpg" class="d-block w-100" alt="portada del ep globular de ezequiel arias">
         </div>
         <div class="carousel-item">
-          <img src="../img/showcase33.jpg" class="d-block w-100" alt="fiesta de hernan cattaneo sunsetrip buenos aires 2020">
+          <img src="../img/showcase33.jpg" class="d-block w-100" alt="flyer de evento de sudbeat">
         </div>>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -76,7 +76,7 @@
         <div class="col">
           <center>
             <div class="card bg-dark text-white" >
-              <img src="../img/combina.jpg" class="card-img-top" alt="...">
+              <img src="../img/combina.jpg" class="card-img-top" alt="portada del ep combina">
               <div class="card-body">
                 <a href="https://www.beatport.com/release/combina/3596579" class="btn btn-secondary p-1">Comprar</a>
               </div>
@@ -86,7 +86,7 @@
         <div class="col">
           <center>
             <div class="card bg-dark text-white">
-              <img src="../img/euklidia.jpg" class="card-img-top" alt="...">
+              <img src="../img/euklidia.jpg" class="card-img-top" alt="portada del ep euklidia">
               <div class="card-body">
                 <a href="https://www.beatport.com/release/euklidia/3382513" class="btn btn-secondary p-1">Comprar</a>
               </div>
@@ -96,7 +96,7 @@
         <div class="col">
           <center>
             <div class="card bg-dark text-white" >
-              <img src="../img/closebeside.jpg" class="card-img-top" alt="...">
+              <img src="../img/closebeside.jpg" class="card-img-top" alt="portada del ep close be side">
               <div class="card-body">
                 <a href="https://www.beatport.com/release/close-beside-me/3705934" class="btn btn-secondary p-1">Comprar</a>
               </div>
@@ -106,7 +106,7 @@
         <div class="col">
           <center>
             <div class="card bg-dark text-white" >
-              <img src="../img/impeding.jpg" class="card-img-top" alt="...">
+              <img src="../img/impeding.jpg" class="card-img-top" alt="portada del ep impeding">
               <div class="card-body">
                 <a href="https://www.beatport.com/release/impending-storm/3441143" class="btn btn-secondary p-1">Comprar</a>
               </div>
@@ -116,7 +116,7 @@
         <div class="col">
           <center>
             <div class="card bg-dark text-white" >
-              <img src="../img/castle.jpg" class="card-img-top" alt="...">
+              <img src="../img/castle.jpg" class="card-img-top" alt="portada del ep castle">
               <div class="card-body">
                 <a href="https://www.beatport.com/release/castle-in-the-sky/3562126" class="btn btn-secondary p-1">Comprar</a>
               </div>
@@ -126,7 +126,7 @@
         <div class="col">
           <center>
             <div class="card bg-dark text-white">
-              <img src="../img/magic.jpg" class="card-img-top" alt="...">
+              <img src="../img/magic.jpg" class="card-img-top" alt="portada del ep magic">
               <div class="card-body">
                 <a href="https://www.beatport.com/release/magic-fields/3538232" class="btn btn-secondary p-1">Comprar</a>
               </div>
