--- a/pages/giras.html
+++ b/pages/giras.html
@@ -156,13 +156,13 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../img/forja.jpg" class="d-block w-100" alt="fiesta de hernan cattaneo sunsetrip buenos aires 2020">
+          <img src="../img/forja.jpg" class="d-block w-100" alt="flyer de fiesta de hernan cattaneo">
         </div>
         <div class="carousel-item">
-          <img src="../img/fecha.jpg" class="d-block w-100" alt="fiesta de hernan cattaneo sunsetrip buenos aires 2020">
+          <img src="../img/fecha.jpg" class="d-block w-100" alt="flyer de fiesta de hernan cattaneo">
         </div>
         <div class="carousel-item">
-          <img src="../img/fecha1.jpg" class="d-block w-100" alt="fiesta de hernan cattaneo sunsetrip buenos aires 2020">
+          <img src="../img/fecha1.jpg" class="d-block w-100" alt="flyer de fiesta de hernan cattaneo">
         </div>>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
